MAJ Noms Tests & pom.xml